src/objects/CreditApprover__c.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ANy Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCISource__c</fullName>
        <label>CCI Source</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CreditApprovalLevel__c</fullName>
        <label>Credit Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OP1Source__c</fullName>
        <label>OP1 Source</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>CreditApprover__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>CreditApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesSectionEmail__c</fullName>
        <label>Sales Section Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SalesSection__c</fullName>
        <label>Sales Section</label>
        <picklist>
            <controllingField>BusinessUnit__c</controllingField>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester SSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order, Motors, Homes &amp; Gardens, Interiors &amp; Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility, Health, Career Mail, Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems &amp; Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Barry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Hendle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Stevens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Credit Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>SalesManager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with sales manager</label>
        <sharedTo>
            <group>Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Approvers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>